dashboard_startup.log
  File "/home/leo/Schreibtisch/project-genesis/skills/soul-evolution/tools/soul-viz.py", line 5310
    const balances = result.balances || {};
                                         ^
SyntaxError: f-string: valid expression required before '}'
